# embedded-fun

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml
docs/: icm20948-driver-plan.md
src/: led.rs  lib.rs
src/control/: mod.rs
src/network/: credentials.rs  mod.rs  ntp.rs  telemetry.rs  wifi.rs
src/sensors/: fuel_gauge.rs  gps.rs  imu.rs  mod.rs
src/storage/: mod.rs  sd_logger.rs
