[package]
edition      = "2021"
name         = "esp32-wifi"
rust-version = "1.86"
version      = "0.1.0"

[[bin]]
name = "esp32-wifi"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32"] }
esp-hal                = { version = "=1.0.0-rc.0", features = ["esp32", "unstable"] }

critical-section = "1.2.0"
embedded-io = "0.6.1"
esp-alloc = "0.8.0"
esp-println = { version = "0.14", features = ["esp32"] }
esp-wifi = { version = "0.15.0", features = [
  "builtin-scheduler",
  "esp-alloc",
  "esp32",
  "smoltcp",
  "wifi",
] }
esp-storage = { version = "0.5.0", features = ["esp32"] }
embedded-storage = "0.3.1"
heapless = "0.8.0"
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
# esp-storage requires opt-level 2 or 3 for ESP32
opt-level = 2

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 3
overflow-checks  = false
