[package]
edition      = "2021"
name         = "esp32-wifi"
rust-version = "1.86"
version      = "0.1.0"

[[bin]]
name = "esp32-wifi"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32"] }
esp-hal                = { version = "=1.0.0-rc.0", features = ["esp32", "unstable"] }
esp-hal-embassy        = { version = "=0.9.0", features = ["esp32"] }

critical-section = "1.2.0"
embedded-hal = "1.0"
embedded-hal-02 = { package = "embedded-hal", version = "0.2.7" }
embedded-io-async = "0.6.1"
esp-alloc = "0.8.0"
esp-println = { version = "0.14", features = ["esp32"] }
esp-wifi = { version = "0.15.0", features = [
  "esp-alloc",
  "esp32",
  "wifi",
] }
esp-storage = { version = "0.5.0", features = ["esp32"] }
embedded-storage = "0.3.1"
heapless = "0.8.0"
max170xx = "1.0.0"
ublox = { version = "0.7.0", default-features = false, features = ["alloc", "ubx_proto27"] }
icm20948 = "0.0.1"

# Embassy dependencies
embassy-executor = { version = "0.7", features = ["task-arena-size-32768"] }
embassy-time = "0.4"
embassy-sync = "0.6"
embassy-net = { version = "0.6", features = ["dhcpv4", "tcp", "udp", "dns", "proto-ipv4", "medium-ethernet"] }
embassy-futures = "0.1"
embassy-embedded-hal = "0.3"
static_cell = "2.1"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
# esp-storage requires opt-level 2 or 3 for ESP32
opt-level = 2

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 3
overflow-checks  = false
